Fix: fix text scaling issues on mobile devices

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1089,6 +1089,7 @@ screen and (min-height: 800px) {
         .send-email {
             padding: 1.5em 3em;
             border-radius: 20px;
+            font-size: .8em;
         }
     }
 
